# cascade

./: .gitignore  Cargo.toml  README.md
proto/: data.proto  rpc.proto
proto/google/api/: annotations.proto
service/: Cargo.toml
service/src/: main.rs
service/src/storage/: file.rs  index.rs  mod.rs  query.rs  segment.rs  topic.rs
shared/: Cargo.toml  build.rs
shared/src/: lib.rs
slogd-client/: Cargo.toml
slogd-client/src/: lib.rs
slogd-service/: Cargo.toml  build.rs
slogd-service/src/: main.rs
slogd-service/src/storage/: mod.rs
slogd-shared/: Cargo.toml  build.rs
slogd-shared/src/protos/: config.rs  data.rs  mod.rs  rpc.rs  rpc_grpc.rs
slogd-storage/: Cargo.toml
slogd-storage/src/: lib.rs
storage/: Cargo.toml
