[package]
name = "slogd-client"
version = "0.1.0"
authors = ["Michael Rose <elementation@gmail.com>"]

[dependencies]
failure = "0.1"
failure_derive = "0.1"
futures = "0.1"
grpcio = "0.4"
slogd-shared = { path = "../slogd-shared" }
protobuf = "2.0"

[build-dependencies]
protoc-grpcio = "0.2"
protoc-rust = "2.0"