[package]
name = "slogd-service"
version = "0.1.0"
authors = ["Michael Rose <elementation@gmail.com>"]

[dependencies]
chrono = { version = "0.4" }
clap = "~2.31"
env_logger = "0.5"
failure = "0.1"
failure_derive = "0.1"
futures = "0.1"
grpcio = "0.4"
log = "0.3"
slogd-shared = { path = "../slogd-shared" }
tokio = "0.1"
protobuf = "2.0"

[build-dependencies]
protoc-grpcio = "0.2"
protoc-rust = "2.0"